main.tf

# resource "azurerm_virtual_machine" "linux_vm" {
#   count               = var.number_of_vms
#   name                = "${var.name_prefix}-vm-${count.index}"
#   location            = var.location
#   resource_group_name = var.resource_group_name
#   network_interface_ids = [azurerm_network_interface.vm_nic[count.index].id]
#   vm_size            = var.vm_size

#   storage_image_reference {
#     publisher = var.os_publisher
#     offer     = var.os_offer
#     sku       = var.os_sku
#     version   = var.os_version
#   }


#   storage_os_disk {
#     name              = "osdisk-${count.index}"
#     caching           = "ReadWrite"
#     create_option     = "FromImage"
#     managed_disk_type = "Standard_LRS"
#   }

#   os_profile {
#     computer_name  = "${var.name_prefix}-vm-${count.index}"
#     admin_username = var.admin_username
#     # custom_data    = filebase64("${path.module}/cloud-init.txt")
#   }

#   os_profile_linux_config {
#     disable_password_authentication = true
#     ssh_keys {
#       path     = "/home/${var.admin_username}/.ssh/authorized_keys"
#       key_data = file(var.ssh_key)
#     }
#   }

#   tags = var.tags
# }




# resource "azurerm_network_interface" "vm_nic" {
#   count               = var.number_of_vms
#   name                = "${var.name_prefix}-nic-${count.index}"
#   location            = var.location
#   resource_group_name = var.resource_group_name

#   ip_configuration {
#     name                          = "internal"
#     subnet_id                     = var.vnet_subnet_id
#     private_ip_address_allocation = "Dynamic"
#   }

#   tags = var.tags
# }

# resource "azurerm_network_security_group" "vm_nsg" {
#   name                = "${var.name_prefix}-nsg"
#   location            = var.location
#   resource_group_name = var.resource_group_name

#   security_rule {
#     name                       = "SSH"
#     priority                   = 1001
#     direction                  = "Inbound"
#     access                     = "Allow"
#     protocol                   = "Tcp"
#     source_port_range          = "*"
#     destination_port_range     = var.remote_port
#     source_address_prefix      = "*"
#     destination_address_prefix = "*"
#   }

#   tags = var.tags
# }

# resource "azurerm_network_interface_security_group_association" "vm_nic_nsg" {
#   count                     = var.number_of_vms
#   network_interface_id      = azurerm_network_interface.vm_nic[count.index].id
#   network_security_group_id = azurerm_network_security_group.vm_nsg.id
# }

# main.tf

resource "azurerm_virtual_machine" "linux_vm" {
  count               = var.number_of_vms
  name                = "${var.name_prefix}-vm-${count.index}"
  location            = var.location
  resource_group_name = var.resource_group_name
  network_interface_ids = [azurerm_network_interface.vm_nic[count.index].id]
  vm_size            = var.vm_size

  storage_image_reference {
    publisher = var.os_publisher
    offer     = var.os_offer
    sku       = var.os_sku
    version   = var.os_version
  }

  storage_os_disk {
    name              = "osdisk-${count.index}"
    caching           = "ReadWrite"
    create_option     = "FromImage"
    managed_disk_type = "Standard_LRS"
  }

  os_profile {
    computer_name  = "${var.name_prefix}-vm-${count.index}"
    admin_username = var.admin_username
  }

  os_profile_linux_config {
    disable_password_authentication = true
    ssh_keys {
      path     = "/home/${var.admin_username}/.ssh/authorized_keys"
      key_data = file(var.ssh_key)
    }
  }

  boot_diagnostics {
    enabled     = var.boot_diagnostics
    storage_uri = var.boot_diagnostics ? azurerm_storage_account.vm_sa[count.index].primary_blob_endpoint : ""
  }

  tags = var.tags
}

resource "random_id" "storage_suffix" {
  count        = var.number_of_vms
  byte_length  = 4
}

resource "azurerm_storage_account" "vm_sa" {
  count = var.number_of_vms
  name                     = "vmstorageacc${random_id.storage_suffix[count.index].hex}"
  resource_group_name      = var.resource_group_name
  location                 = var.location
  account_tier             = "Standard"
  account_replication_type = "LRS"
  tags                     = var.tags
}

resource "azurerm_network_interface" "vm_nic" {
  count               = var.number_of_vms
  name                = "${var.name_prefix}-nic-${count.index}"
  location            = var.location
  resource_group_name = var.resource_group_name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = var.vnet_subnet_id
    private_ip_address_allocation = "Dynamic"
  }

  tags = var.tags
}

resource "azurerm_network_security_group" "vm_nsg" {
  name                = "${var.name_prefix}-nsg"
  location            = var.location
  resource_group_name = var.resource_group_name

  security_rule {
    name                       = "SSH"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = var.remote_port
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  tags = var.tags
}

resource "azurerm_network_interface_security_group_association" "vm_nic_nsg" {
  count                     = var.number_of_vms
  network_interface_id      = azurerm_network_interface.vm_nic[count.index].id
  network_security_group_id = azurerm_network_security_group.vm_nsg.id
}
